# kubernetes-dynamic

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GitVersion.yml  LICENSE  README.md  pyproject.toml  requirements.txt  sandbox.ipynb  sonar-project.properties  tox.ini
.github/workflows/: release.yaml
kubernetes_dynamic/: __init__.py  _kubernetes.py  client.py  config.py  events.py  exceptions.py  formatters.py  kube_event.py  resource.py  resource_api.py  resource_field.py
kubernetes_dynamic/kube/: dateutil.py  discovery.py  exceptions.py  exec_provider.py  incluster_config.py  kube_config.py  resource.py  resource_api.py  ws_client.py
kubernetes_dynamic/models/: __init__.py  all.py  common.py  configmap.py  ingress.py  namespace.py  pod.py  replica_set.py  resource_item.py  resource_value.py  secret.py  service.py  stateful_set.py
kubernetes_dynamic/openapi_client/: api_client.py  configuration.py  exceptions.py  rest.py
tests/: conftest.py  test_client.py  test_configmap.py  test_ingress.py  test_namespace.py  test_pod.py  test_resource.py  test_resource_api.py  test_resource_item.py  test_resource_value.py  test_secret.py
tests/unit/: test_config.py  test_configmap.py  test_namespace.py  test_pod.py  test_resource_item.py  test_resource_value.py
