[project]
name = "kubernetes-dynamic"
requires-python = ">=3.7"
readme = "README.md"
description = "Kubernetes Dynamic client"
dynamic = ["version", "dependencies"]
authors = [
    "Attila Kobor <atti92@gmail.com>",
    "Balazs Hamorszky <balihb@gmail.com>"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = true
exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "kubernetes_dynamic.tests*", "kubernetes_dynamic.tests.*"]
include = ["", "kubernetes_dynamic.*"]

[tool.setuptools.dynamic]
version = { attr = "kubernetes_dynamic._version.__version__" }
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
testpaths = ["kubernetes_dynamic/tests"]

[tool.poetry]
name = "kubernetes-dynamic"
version = "0.0.0"
description = ""
authors = ["Attila Kobor <atti92@gmail.com>",
           "Balazs Hamorszky <balihb@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "kubernetes_dynamic"}]
