[project]
name = "kubernetes-dynamic"
requires-python = ">=3.7"
readme = "README.md"
description = "Kubernetes Dynamic client"
dynamic = ["version", "dependencies"]
authors = [
    {name = "Attila Kobor", email = "atti92@gmail.com"},
    {name = "Balazs Hamorszky", email = "balihb@gmail.com"}
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = true
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
include = ["kubernetes_dynamic", "kubernetes_dynamic.*"]

[tool.setuptools.dynamic]
version = { attr = "kubernetes_dynamic._version.__version__" }
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
testpaths = ["tests/"]
