[project]
name = "kubernetes-dynamic"
requires-python = ">=3.7"
readme = "README.md"
description = "Kubernetes Dynamic client"
dynamic = ["version", "dependencies"]
authors = [
    {name = "Attila Kobor", email = "atti92@gmail.com"},
    {name = "Balazs Hamorszky", email = "balihb@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: Freely Distributable",
    "Programming Language :: Python :: 3",
]

license = {text = "BSD-3-Clause"}
keywords = ["kubernetes", "client", "kubernetes-client", "kubernetes-dynamic", "dynamic"]

[project.urls]
homepage = "https://github.com/atti92/kubernetes-dynamic"
documentation = "https://github.com/atti92/kubernetes-dynamic"
repository = "https://github.com/atti92/kubernetes-dynamic.git"
changelog = "https://github.com/atti92/kubernetes-dynamic/blob/main/README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = true
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
include = ["kubernetes_dynamic", "kubernetes_dynamic.*"]

[tool.setuptools.dynamic]
version = { attr = "kubernetes_dynamic._version.__version__" }
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
